--- a/First Project.ipynb
+++ b/First Project.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Data=pd.read_csv('D:\\s\\Datasets\\Dataset.csv')\n",
+    "Data=pd.read_csv('D:\\Datasets\\Dataset.csv')\n",
     "\n",
     "df=pd.DataFrame(data=Data)"
    ]
