--- a/Stores.ipynb
+++ b/Stores.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('D:\\\\Mohammad\\Datasets\\Stores.csv')"
+    "df = pd.read_csv('D:\\Datasets\\Stores.csv')"
    ]
   },
   {
